<resources>
    <string name="app_name">SRMC</string>
    <!--
    Font family: STIX Two Text
    Line height: 25sp
    -->
    <style name="welcome_to_">
        <item name="android:fontFamily">@font/stixtwotext_italic</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#A3001C</item>
    </style>

    <string name="welcome_to_">
        Welcome to Sto.Rosario \nMulti-specialty Clinic!
    </string>
    <!-- styles.xml -->
    <style name="nurturing_h">
        <item name="android:fontFamily">@font/texturina</item>
        <item name="android:textSize">14sp</item>
        <item name="android:textColor">#A3001C</item>
    </style>

    <!-- strings.xml -->
    <string name="nurturing_h">
        "Nurturing Health, Empowering Lives"
    </string>

    <style name="get_started">
        <item name="android:fontFamily">@font/stixtwotext_italic</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#A3001C</item>
    </style>
    <!-- strings.xml -->
    <string name="get_started">
            Get Started
    </string>

    <style name="forgot_pass">
        <item name="android:textSize">14sp</item>
        <item name="android:textColor">#A3001C</item>
    </style>
    <!-- strings.xml -->
    <string name="forgot_pass">
        Forgot Password
    </string>

    <style name="how_to_use_">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#FCFEFE</item>
    </style>
    <!-- strings.xml -->
    <string name="how_to_use_">
        How to Use Our App?
    </string>

    <style name="visit_the_c">
        <item name="android:textSize">11sp</item>
        <item name="android:textColor">#A3001C</item>
    </style>
    <!-- strings.xml -->
    <string name="visit_the_c">
        Visit the Clinic Website\nAccess the official clinic website at [website URL].\nAccount Creation\nFill out the required registration form with accurate personal \ninformation.\n Account Verification\nClick on the link to verify your email and activate your account.\nLog In to Your Account\nReturn to the clinic website or using the application you can log in\n using your email and password.\nAppointment Booking\nAfter logging in, select the "Book Appointment" option from your \naccount dashboard.\n\n
    </string>

    <style name="faqs">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#FCFEFE</item>
    </style>
    <!-- strings.xml -->
    <string name="faqs">
        FAQs
    </string>

    <style name="the_sto_ros">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="the_sto_ros">
        The Sto. Rosario Multispecialty Clinic application \nis a mobile or web-based platform designed to facilitate \nvarious healthcare-related services offered by our clinic.\nFor web access, you can visit our website and access the \napplication from there. \n\nThe app allows you to schedule appointments with\n our healthcare providers, access your medical records,\nview test results, request prescription refills, and \nreceive important clinic updates and announcements.\n
    </string>

    <style name="u">
        <item name="android:textSize">32sp</item>
        <item name="android:textColor">#FFFFFF</item>
    </style>
    <!-- strings.xml -->
    <string name="u">
        U
    </string>

    <style name="welcome_use">
        <item name="android:fontFamily">@font/stylish</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="welcome_use">
        Welcome User!
    </string>

    <style name="start_your_">
        <item name="android:fontFamily">@font/stylish</item>
        <item name="android:textSize">13sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="start_your_">
        Start your wellness journey today
    </string>

    <style name="home">
        <item name="android:textSize">10sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="home">
Home
</string>

    <style name="whats_new_">
        <item name="android:textSize">14sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="whats_new_">
Whats New?\n
</string>

    <style name="telemed_">
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="telemed_">
        Telemed!
    </string>

    <style name="vaccines_ar">
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#FFFFFF</item>
    </style>
    <!-- strings.xml -->
    <string name="vaccines_ar">
Vaccines ARE AVAILABLE!
</string>

    <style name="measles_mum">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#FFFFFF</item>
    </style>
    <!-- strings.xml -->
    <string name="measles_mum">
Measles, Mumps and Rubella (MMR) vaccine \nPolio vaccine\nAnti Tetanus, \nDiphtheria, and more...
</string>

    <style name="visit_our_w">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="visit_our_w">
Visit our web page for more info!
</string>

    <style name="insert_webs">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="insert_webs">
\u00E2\u0080\u009Cinsert website link\u00E2\u0080\u009D
</string>

    <style name="are_service">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="are_service">
are services conducted via telecommunications technology, such as video calls, phone calls, or secure messaging.
</string>
    <style name="activities">
        <item name="android:textSize">10sp</item>
        <item name="android:textColor">#000000</item>
    </style>
    <!-- strings.xml -->
    <string name="activities">
        Activities
    </string>

    <style name="vaccine">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#A3001C</item>
    </style>
    <!-- strings.xml -->
    <string name="vaccine">
Vaccine
</string>
</resources>