<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome"
    android:layout_width="409dp"
    android:layout_height="800dp"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="144dp"
        android:layout_height="151dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-46dp"
        android:layout_marginTop="-6dp"
        android:background="@drawable/shape" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="153dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="-61dp"
        android:background="@drawable/shape" />

    <View
        android:id="@+id/logo_white"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="204dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/logo_white"
        />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_9"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="191dp"
        android:clipToOutline="true"
        android:background="#AA6E76">

        <TextView
            android:id="@+id/faqs"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="29dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:text="@string/faqs"
            android:textAppearance="@style/faqs"
            android:gravity="top"
            />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_9"
        android:layout_width="478dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:clipToOutline="true">

        <TextView
            android:id="@+id/the_sto_ros"
            android:layout_width="314dp"
            android:layout_height="165dp"
            android:text="@string/the_sto_ros"
            android:textAppearance="@style/the_sto_ros"
            android:gravity="top"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="529dp"
        android:gravity="top"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_" />
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <TextView
        android:id="@+id/nurturing_h"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="579dp"
        android:gravity="top"
        android:text="@string/nurturing_h"
        android:textAppearance="@style/nurturing_h" />

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <View
        android:id="@+id/ellipse_4"
        android:layout_width="13dp"
        android:layout_height="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="610dp"
        android:background="@drawable/shape_small"
        android:onClick="OpenFirstActivity"/>

    <View
        android:id="@+id/ellipse_5"
        android:layout_width="13dp"
        android:layout_height="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="610dp"
        android:background="@drawable/shape_small"
        android:onClick="OpenActivity2"/>

    <View
        android:id="@+id/ellipse_6"
        android:layout_width="13dp"
        android:layout_height="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="222dp"
        android:layout_marginTop="610dp"
        android:background="@drawable/shape_small" />


    <Button
        android:id="@+id/button2"
        android:layout_width="223dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="85dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="655dp"
        android:clipToOutline="true"
        android:backgroundTint="@drawable/button_background_color"
        android:elevation="4dp"
        android:onClick="onClick"
        android:text="@string/get_started"/>
</RelativeLayout>