<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="409dp"
    android:layout_height="800dp"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="144dp"
        android:layout_height="151dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-46dp"
        android:layout_marginTop="-6dp"
        android:background="@drawable/shape" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="153dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="-61dp"
        android:background="@drawable/shape" />

    <View
        android:id="@+id/ellipse_7"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/home_circle"
        />
    <TextView
        android:id="@+id/u"
        android:layout_width="26dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="41dp"
        android:text="@string/u"
        android:textAppearance="@style/u"
        android:gravity="top"
        />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="127dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="212dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="54dp"
            android:clipToOutline="true"
            android:background="@drawable/search_bar"
            android:ems="10"
            android:inputType="text"
            android:Hint="Name" />

    <TextView
        android:id="@+id/welcome_use"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="93dp"
        android:text="@string/welcome_use"
        android:textAppearance="@style/welcome_use"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/start_your_"
        android:layout_width="172dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="116dp"
        android:text="@string/start_your_"
        android:textAppearance="@style/start_your_"
        android:gravity="top"
        />

    <View
        android:id="@+id/untitled_de"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="132dp"
        android:background="@drawable/untitled_de"
        />
</RelativeLayout>