<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome"
    android:layout_width="409dp"
    android:layout_height="800dp"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <View
        android:id="@+id/logo_white"
        android:layout_width="287dp"
        android:layout_height="345dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/logo_white"
        />
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <View
        android:id="@+id/image_1"
        android:layout_width="341dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="288dp"
        android:background="@drawable/image_1"
        />
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="529dp"
        android:gravity="top"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_"/>
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <TextView
        android:id="@+id/nurturing_h"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="87dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="579dp"
        android:text="@string/nurturing_h"
        android:textAppearance="@style/nurturing_h"
        android:gravity="top"
        />

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <View
        android:id="@+id/ellipse_4"
        android:layout_width="13dp"
        android:layout_height="12dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="149dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="610dp"
        android:background="#A3001C"
        />

    <View
        android:id="@+id/ellipse_5"
        android:layout_width="13dp"
        android:layout_height="12dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="187dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="610dp"
        android:background="#AA6E76"
        />

    <View
        android:id="@+id/ellipse_6"
        android:layout_width="13dp"
        android:layout_height="12dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="222dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="610dp"
        android:background="#AA6E76"
        />
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_2"
        android:layout_width="223dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="85dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="655dp"
        android:clipToOutline="true"
        android:background="@drawable/frame_2"
        android:elevation="4dp">
        <TextView
            android:id="@+id/get_started"
            android:layout_width="107dp"
            android:layout_height="17dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="73dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="7dp"
            android:text="@string/get_started"
            android:textAppearance="@style/get_started"
            android:gravity="top"
            />
    </RelativeLayout>

</RelativeLayout>